--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,13 @@
 name: Publish Docker image for release
 
 on:
-  release:
-    types: [published]
+#  release:
+#    types: [published]
+
+  push:
+    branches:
+      - release
+
 
 jobs:
   push_to_registry:
