--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       context: .
       dockerfile: docker/Dockerfile
     volumes:
-      - ./src:/app/src
+#      - ./src:/app/src
       - ./databases.json:/app/src/data/config/config.json
     environment:
       ENVIRONMENT: "development"
