--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -4,8 +4,7 @@ on:
     branches:
       - main
 
-    paths:
-      - "docker/Dockerfile"
+
 
 jobs:
   publish_images:
@@ -15,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
       - name: build image
         run: |
-          docker build . -t solucetechnologies/agent-portabase:dev
+          docker build -f ./docker/Dockerfile -t solucetechnologies/agent-portabase:dev
       - name: push image to docker hub
         run: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
