--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
       - name: build image
         run: |
-          docker build -f ./docker/Dockerfile -t solucetechnologies/agent-portabase:dev
+          docker build ./docker/Dockerfile -t solucetechnologies/agent-portabase:dev
       - name: push image to docker hub
         run: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
