Correcting some bugs.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,7 +4,7 @@ services:
   app:
     container_name: agent-portabase-prod
     restart: always
-    image: solucetechnologies/agent-portabase:release
+    image: solucetechnologies/agent-portabase:dev
     volumes:
       - ./databases.json:/app/src/data/config/config.json
     environment:
