--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ packages = ["src"]
 
 [project]
 name = "portabase-agent"
-version = "1.0.0"
-description = "THe portabase agent project"
+version = "1.0.1"
+description = "The portabase agent project"
 authors = [
     { name = "Charles Gauthereau", email = "charles.gauthereau@soluce-technologies.com" },
     { name = "Killian Larcher", email = "killian.larcher@soluce-technologies.com" }
@@ -25,6 +25,7 @@ dependencies = [
     "watchdog>=6.0.0",
     "requests>=2.32.3",
     "celery-redbeat>=2.2.0",
+    "cryptography>=46.0.3"
 ]
 classifiers = [
     #   3 - Alpha
