--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,10 @@ services:
     volumes:
       - ./src:/app/src
       - ./databases.json:/app/src/data/config/config.json
+      - ./server_public.pem:/app/server_public.pem
     environment:
       ENVIRONMENT: "development"
-      EDGE_KEY: "eyJzZXJ2ZXJVcmwiOiJodHRwOi8vbG9jYWxob3N0Ojg4ODciLCJhZ2VudElkIjoiZjU0YmVhOWMtODBlYy00YTZmLTk1OTQtZDg2NTYzNzdkZmU0In0"
+      EDGE_KEY: "eyJzZXJ2ZXJVcmwiOiJodHRwOi8vbG9jYWxob3N0Ojg4ODciLCJhZ2VudElkIjoiYjFkMzM4ZjAtYTgyNC00NThiLTk5MjgtMDY2ZTE5NDdiYzdhIn0"
     network_mode: host #in development
 
   db:
