--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,8 +26,21 @@ services:
       - POSTGRES_DB=devdb
       - POSTGRES_USER=devuser
       - POSTGRES_PASSWORD=changeme
+    network_mode: host
 
-    network_mode: host #in development
+  db2:
+    image: mariadb:latest
+    ports:
+      - "3306:3306"
+    environment:
+      - MYSQL_DATABASE=mariadb
+      - MYSQL_USER=mariadb
+      - MYSQL_PASSWORD=changeme
+      - MYSQL_RANDOM_ROOT_PASSWORD=yes
+    volumes:
+      - mariadb-data:/var/lib/mysql
+    network_mode: host
 
 volumes:
   postgres-data:
+  mariadb-data:
